--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "devDependencies": {
     "css-loader": "^1.0.1",
+    "file-loader": "^2.0.0",
     "html-loader": "0.5.5",
     "mini-css-extract-plugin": "0.4.4",
     "webpack": "4.25.1",
